--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "homepage": "https://github.com/andrzejwojciak/happy-coach#readme",
   "devDependencies": {
     "@types/node": "^18.11.17",
-    "typescript": "^4.9.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
@@ -31,10 +30,15 @@
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@slack/bolt": "3.12.2",
+    "@slack/events-api": "3.0.1",
     "axios": "0.26.1",
-    "dotenv": "16.0.0"
+    "dotenv": "16.0.0",
+    "pg": "8.8.0",
+    "typeorm": "0.3.11"
   }
 }
