--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "start:dev": "ts-node --esm src/index.ts",
     "watch": "nodemon --watch './**/*.ts' --exec npx ts-node --esm ./src/index.ts",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "typeorm": "typeorm-ts-node-esm"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
-    "ts-node": "^10.7.0",
+    "ts-node": "10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
