Migrate to nextjs

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-SLACK_BOT_TOKEN = 'xoxb-token'
-SLACK_SIGNING_SECRET = 'token'
-APP_TOKEN = 'xapp-1-token'
+SLACK_BOT_TOKEN = 'xoxb-xxx'
+SLACK_SIGNING_SECRET = 'xxx'
+APP_TOKEN = 'xapp-xxx'
 
-DB_HOST = 'url'
-DB_PORT = port
-DB_USERNAME =  'username'
-DB_PASSWORD = 'password'
-DB_DBNAME = 'dbname'
+DB_HOST = 'xxx'
+DB_PORT = 000
+DB_USERNAME =  'xxx'
+DB_PASSWORD = 'xxx'
+DB_DBNAME = 'xxx'
+
+DATABASE_URL="postgresql://login:password@url:port/dbname?schema=public"
