--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   happy_coach:
     container_name: happy_coach
+    ports:
+      - '3000:3000'
     restart: always
     build: .
     depends_on:
@@ -11,13 +13,17 @@ services:
     container_name: postgres
     image: postgres:15-alpine
     ports:
-      - '5432:${DB_PORT}'
+      - '${DB_PORT}:5432'
     volumes:
       - data:/data/db
     environment:
       - POSTGRES_USER=${DB_USERNAME}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_DBNAME}
+
+networks:
+  mynetwork:
+    driver: bridge
 
 volumes:
   data: {}
