--- a/package.json
+++ b/package.json
@@ -1,45 +1,32 @@
 {
-  "name": "happy-coach",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
+  "name": "happy-coach-ui",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "node build/index.js",
-    "build": "tsc",
-    "start:dev": "ts-node --esm src/index.ts",
-    "watch": "nodemon --watch './**/*.ts' --exec npx ts-node --esm ./src/index.ts",
-    "lint": "eslint . --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/andrzejwojciak/happy-coach.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/andrzejwojciak/happy-coach/issues"
-  },
-  "homepage": "https://github.com/andrzejwojciak/happy-coach#readme",
-  "devDependencies": {
-    "@types/node": "^18.11.17",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "nodemon": "^2.0.15",
-    "prettier": "^2.6.2",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.9.4"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "@slack/bolt": "3.12.2",
-    "@slack/events-api": "3.0.1",
-    "axios": "0.26.1",
-    "dotenv": "16.0.0",
-    "moment": "2.29.4",
-    "pg": "8.8.0",
-    "typeorm": "0.3.11"
+    "moment": "^2.30.1",
+    "next": "14.1.3",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/ws": "^8.5.10",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
+    "postcss": "^8",
+    "prisma": "^5.11.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
