--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.11.0",
     "@slack/bolt": "3.12.2",
+    "clsx": "^2.1.0",
     "moment": "^2.30.1",
     "next": "14.1.3",
     "react": "^18",
