Add drfat admin panel

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,6 @@ DB_USERNAME =  'xxx'
 DB_PASSWORD = 'xxx'
 DB_DBNAME = 'xxx'
 
+MAIN_CHANNEL = 'xxx'
+
 DATABASE_URL="postgresql://login:password@url:port/dbname?schema=public"
