--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.11.0",
     "@slack/bolt": "3.12.2",
+    "@types/uuid": "^9.0.8",
     "clsx": "^2.1.0",
     "moment": "^2.30.1",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
