--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.11.0",
     "@slack/bolt": "3.12.2",
+    "@types/next-auth": "^3.15.0",
     "@types/uuid": "^9.0.8",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "moment": "^2.30.1",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
