--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@slack/bolt": "3.12.2",
     "@types/uuid": "^9.0.8",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
     "moment": "^2.30.1",
     "next": "14.1.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "uuid": "^9.0.1"
   },
